--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,7 +1,6 @@
 .home-container {
     .heading {
         text-align: center;
-        margin-top: 2rem;
     }
 
     .error {
